# FAT32_PARSER

./: .gitignore  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: allocator.rs  fat32_types.rs  lib.rs  main.rs  tests.rs
