[package]
name = "fat32_parser" # Corrigé en snake_case
version = "0.1.0"
edition = "2024"

[lib]
bench = false
test = false

# AJOUTEZ CETTE SECTION pour créer un EXÉCUTABLE
[[bin]]
name = "fat32_parser" 
path = "src/lib.rs" # On utilise le même fichier que la librairie
required-features = [] 

[dependencies]
